# morphoGen

./: CMakeLists.txt  license.txt
app/: CMakeLists.txt  carmine.calib  icub.calib  (+1 more)
src/: CMakeLists.txt
src/Darwin Observer/include/: ObserverThread.h
src/Darwin Observer/src/: ObserverThread.cpp
src/EpisodicMem/include/: EpisodicMemThread.h
src/EpisodicMem/src/: main.cpp
src/Event driven reasoning/include/: EpisodicMemThread.h
src/Event driven reasoning/src/: EpisodicMemThread.cpp
src/Grasper/: CMakeLists.txt
src/Grasper/src/: Grasper.cpp
src/MeccanoObjDet/include/: caihash.hpp
src/MeccanoObjDet/src/: TLdetector.cpp  YarpWrapper.cpp
src/SMSupportPMP/: CMakeLists.txt  Gamma.txt  b1.txt  fileutil.h  main.cpp  pmp.h  vision.h  w1.txt  w11.txt
src/Shape Sytem/: CMakeLists.txt
src/Shape Sytem/src/: TLdetector.cpp  YarpWrapper.cpp  shapedet.cpp
src/codesBackup/DarwinObserver/: CMakeLists.txt
src/codesBackup/DarwinObserver/src/: main.cpp
src/codesBackup/EpisodicMem/: CMakeLists.txt  EpisodesNew.txt  HeEpMult.txt  PXper.txt  Remembered.txt  WeightN.txt
src/codesBackup/EpisodicMem/include/: EpisodicMemModule.h  EpisodicMemThread.h
src/codesBackup/EpisodicMem/src/: EpisodicMemModule.cpp  EpisodicMemThread.cpp
src/colorVision/include/: colorVisionThread.h
src/colorVision/src/: colorVisionModule.cpp  colorVisionThread.cpp  segment.cpp
src/control/: CMakeLists.txt
src/control/PMP/: CMakeLists.txt
src/control/PMP/include/: PMPModule.h  PMPThread.h  utils.h
src/control/PMP/src/: PMPModule.cpp  PMPThread.cpp
src/control/PMPRX_Neural/include/: Kinematics.h  KinematicsRX130.h  PMPThread.h  vecmath3D.h
src/control/PMPRX_Neural/src/: PMPThread.cpp
src/control/SMSupportPMP/: Amat.txt  inverse.txt  pmp.cpp  vision.cpp  w22.txt
src/control/pmpAnalytic/: CMakeLists.txt
src/control/pmpAnalytic/include/: PMPModule.h  PMPThread.h
src/control/pmpAnalytic/src/: PMPThread.cpp
src/control/postureControl/include/iCub/: postureControlThread.h
src/control/postureControl/src/: postureControlModule.cpp  postureControlThread.cpp
src/emPlotter/include/: emPlotterModule.h
src/emPlotter/src/: emPlotterRatethread.cpp  hubThread.cpp  rememberedxThread.cpp
src/examples/colorQuantizator/: CMakeLists.txt
src/examples/colorQuantizator/include/iCub/: colorQuantizatorModule.h  colorQuantizatorThread.h
src/examples/colorQuantizator/src/: colorQuantizatorThread.cpp  main.cpp
src/gui/: CMakeLists.txt
src/gui/assemblyInterface/: CMakeLists.txt  assemblyVisualization.cpp
src/gui/assemblyVisualization/: CMakeLists.txt  assemblyVisualization.cpp
src/gui/emPlotter/: CMakeLists.txt
src/gui/emPlotter/include/: emPlotterModule.h  emPlotterRatethread.h  hubTypeThread.h  partialThread.h  planThread.h
src/gui/emPlotter/src/: emPlotterRatethread.cpp  hubTypeThread.cpp  partialThread.cpp  planThread.cpp  rememberedxThread.cpp
src/gui/neuronsVisualization/: CMakeLists.txt
src/gui/neuronsVisualization/include/: neuroVisModule.h  neuroVisRatethread.h
src/gui/neuronsVisualization/src/: main.cpp  neuroVisRatethread.cpp
src/gui/visualizationControl/include/: visualizationControlModule.h  visualizationControlRatethread.h
src/gui/visualizationControl/src/: visualizationControlRatethread.cpp
src/gui/visualizationGui/: CMakeLists.txt
src/gui/visualizationGui/include/: visualizationGui.h
src/gui/visualizationGui/src/: visualizationGui.cpp
src/reasoning/: CMakeLists.txt
src/reasoning/EpisodicMemory/: CMakeLists.txt
src/reasoning/EpisodicMemory/include/: EpisodicMemModule.h
src/reasoning/EpisodicMemory/src/: EpisodicMemThread.cpp
src/reasoning/NewEpim/: CMakeLists.txt
src/reasoning/NewEpim/include/: EpisodicMemThread.h
src/reasoning/NewEpim/src/: EpisodicMemModule.cpp  EpisodicMemThread.cpp  main.cpp
src/reasoning/NewObserver/include/: ObserverThread.h
src/reasoning/NewObserver/src/: ObserverModule.cpp  ObserverThread.cpp  main.cpp
src/reasoning/OPC/: CMakeLists.txt
src/reasoning/OPC/include/: OPCModule.h  OPCThread.h
src/reasoning/OPC/src/: OPCModule.cpp  OPCThread.cpp
src/reasoning/ObserverIndustrial/src/: ObserverModule.cpp  main.cpp
src/reasoningOld/: CMakeLists.txt
src/trajectVisualize/src/: main.cpp
src/tutorialRatethread/include/iCub/: tutorialModule.h  tutorialRatethread.h
src/tutorialThread/include/iCub/: plotterThread.h  tutorialModule.h
src/tutorialThread/src/: plotterThread.cpp  tutorialModule.cpp
src/tutorials/: CMakeLists.txt
src/tutorials/trajectVisualize/src/: main.cpp
src/vision/: CMakeLists.txt
src/vision/blockDetector/src/: TLdetector.cpp  detectorModule.cpp  detectorThread.cpp
src/vision/calibExtrinsic/: CMakeLists.txt
src/vision/colorVision/include/: colorVisionThread.h  fileutil.h
src/vision/colorVision/src/: colorVisionThread.cpp  segment.cpp
src/vision/shapeSelector/include/: shapeSelectorModule.h  shapeSelectorRatethread.h
src/vision/shapeSelector/src/: shapeSelectorModule.cpp  shapeSelectorRatethread.cpp
src/vision/trackTrajectory/: CMakeLists.txt
src/vision/trackTrajectory/src/: main.cpp
trunk/iCub/contrib/src/3DObjectReconstruction/: 3Ddata_3DObjects_thrift.cmake  CMakeLists.txt
trunk/iCub/contrib/src/3DObjectReconstruction/3Ddata/: 3DObjects.thrift
trunk/iCub/contrib/src/3DObjectReconstruction/include/: Pixel.h  SegmentationModuleInterface.h  helpers.h  minBoundBox.h  objectReconstr.h  reconstructionRoutine.h
trunk/iCub/contrib/src/3DObjectReconstruction/include/3Ddata/: PointXYZ.h  Polygon.h  RGBA.h  SurfaceMesh.h
trunk/iCub/contrib/src/3DObjectReconstruction/src/: SegmentationModuleInterface.cpp  helpers.cpp  minBoundBox.cpp  objectReconstr.cpp  reconstructionRoutine.cpp
trunk/iCub/contrib/src/misc/DMPgeneralization/DynamicMovementPrimitives/: CMakeLists.txt
trunk/iCub/contrib/src/morphoGen/: CMakeLists.txt  license.txt
trunk/iCub/contrib/src/morphoGen/app/: CMakeLists.txt  carmine3.calib  carmine_intrinsics_factory.calib  icubEyes.ini
trunk/iCub/contrib/src/morphoGen/src/: CMakeLists.txt
trunk/iCub/contrib/src/peripersonal/doubleTouch/: CMakeLists.txt
(+377 files in other folders)
