# Copyright (C) 2013 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Francesco Rea
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)

#add here the name of the directory you want to build

add_subdirectory( AssocMem           )
add_subdirectory( colorVision        )
add_subdirectory( Grasper            )
add_subdirectory( SmallWorlds        )
add_subdirectory( SMSupportPMP       )
add_subdirectory( tutorial           )
add_subdirectory( tutorialThread     )
add_subdirectory( tutorialRatethread )
add_subdirectory( trajectVisualize   )
add_subdirectory( MeccanoObjDet      )




