# Copyright (C) 2013 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Francesco Rea
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)

#add here the name of the directory you want to build
add_subdirectory( EpisodicMemory    )
add_subdirectory( NewObserver       )
add_subdirectory( ObserverIndustrial)
add_subdirectory( OPC               )


# single modules that are going to be sorted into subsection






