# Copyright (C) 2013 Department of Robotics Brain and Cognitive Sciences - Istituto Italiano di Tecnologia
# Authors: Francesco Rea
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

cmake_minimum_required(VERSION 2.6)

#add here the name of the directory you want to build
#add_subdirectory( vision             )
#add_subdirectory( control            )
#add_subdirectory( reasoning          )

add_subdirectory( shapeSelector       )

# single modules that are going to be sorted into subsection
#add_subdirectory( AssocMem           )
#add_subdirectory( colorVision        )
#add_subdirectory( emPlotter          )
#add_subdirectory( examples           )
#add_subdirectory( Grasper            )
#add_subdirectory( SmallWorlds        )
#add_subdirectory( SMSupportPMP       )
#add_subdirectory( tutorialThread     )
#add_subdirectory( tutorialRatethread )
#add_subdirectory( trajectVisualize   )
#add_subdirectory( MeccanoObjDet      )
#add_subdirectory( EpisodicMem        )

#add_subdirectory( BlockDetect        )

#add_subdirectory( DarwinObserver     )





